--- a/osobl.html
+++ b/osobl.html
@@ -15,10 +15,9 @@
         <a href="osobl.html" class="nav-link active">Особливості</a></li> <li class="nav-item"><a href="price.html" class="nav-link" aria-current="page">Підписки</a></li>  
         <li class="nav-item"><a href="about us.html" class="nav-link">Про нас</a></li> </ul> </header> </div>
  <div class="hero 2">
-<img style="position: absolute; margin-top: 1%; right: 8%; width: 30%;" src="WEB розробки зображ/images.jpg" alt="antivirus">
 
 
-<div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary"> <div class="col-lg-6 px-0"> <h1 class="display-4 fst-italic">Особливості нашої компанії</h1> <p class="lead my-3">1. "Розумний щит" — адаптивний захист
+<div class="p-4 p-md-5 mb-4 rounded text-body-emphasis"> <div class="col-lg-6 px-0"> </div> <h1 class="display-4 fst-italic"; style="color: rgb(61, 174, 178);">Особливості нашої компанії</h1> <p class="display-6 fst-italic"; style="color: aliceblue;">1. "Розумний щит" — адаптивний захист
 Антивірус сам аналізує звички користувача (сайти, програми) і підлаштовує рівень захисту.
 Наприклад: якщо користувач часто працює з USB-носіями — система посилює перевірку флешок.
 <br>
